--- a/aulosplayer/templates/player_big.html
+++ b/aulosplayer/templates/player_big.html
@@ -27,7 +27,7 @@
 		</p>
 	</div>
 	<div class="status">
-		<span class="label">next:</span>
+		<span class="label">next song:</span>
 		<span class="next_song">
 			{{ player.next_song.title|default("&mdash;"|safe) }} &ndash;
 			{{ player.next_song.artist|default("&mdash;"|safe) }}
