--- a/aulosplayer/templates/view.html
+++ b/aulosplayer/templates/view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% import 'player_macros.html' as macros %}
 {% include 'player_big.html' %}
 
 {% endblock %}
