--- a/aulosplayer/static/css/aulosplayer.css
+++ b/aulosplayer/static/css/aulosplayer.css
@@ -62,6 +62,10 @@ body {
 	font-size:150%;
 }
 
+.player .status.subinfo .text {
+	color:#151515;
+}
+
 .player .id {
 	font-size:200%;
 }
@@ -104,7 +108,7 @@ body {
 }
 
 .player.big .box.info .label {
-	font-size:100%;
+	font-size:40%;
 	width:auto;
 	display:block;
 	text-align:left;
@@ -132,7 +136,6 @@ body {
 	border:1px solid #b5daff;
 	background-color:#a34241;
 }
-
 
 /* ===== Box: Controls ===== */
 .player .box.controls {
