--- a/aulosplayer/templates/base.html
+++ b/aulosplayer/templates/base.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Aulosplayer {{ main_title }}</title>
+	<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="/static/css/aulosplayer.css"/>
 	<script type="text/javascript" src="/static/scripts/ext/mootools.js"></script>
 	<script type="text/javascript" src="/static/scripts/ext/mootools-more.js"></script>
