--- a/aulosplayer/templates/player_big.html
+++ b/aulosplayer/templates/player_big.html
@@ -3,7 +3,7 @@
 		<span class="playerstatus">
 			{{ macros.playerstatus(player) }}
 		</span>
-		currently playing:
+		{{ player.name }} currently playing:
 	</div>
 	<div class="box border info maininfo">
 		{{ macros.maininfo(player) }}
